--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
             font-weight: bold;
         }
 
-        #chat-area {
-            display: none;
-            flex-direction: column;
-            height: 100vh;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-
         .chat-header {
             display: flex;
             justify-content: space-between;
@@ -80,15 +72,33 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
         }
 
+        #chat-area {
+            display: none;
+            flex-direction: column;
+            height: 100vh;
+            /* 브라우저 전체 높이 고정 */
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            overflow: hidden;
+            /* 영역 밖으로 나가는 것 방지 */
+        }
+
         #messages {
             list-style: none;
-            padding: 0;
-            flex-grow: 1;
+            padding: 10px;
+            margin: 0;
+            flex: 1;
+            /* 채팅창이 전체 공간을 차지하게 함 */
             overflow-y: auto;
+            /* 메시지 많아지면 스크롤 생성 */
             display: flex;
             flex-direction: column;
             gap: 12px;
-            margin-bottom: 80px;
+            padding-bottom: 120px;
+            /* 하단 입력창에 가려지지 않게 여백 확보 */
+            -webkit-overflow-scrolling: touch;
+            /* 모바일 부드러운 스크롤 */
         }
 
         #messages li {
@@ -139,6 +149,7 @@
             padding: 10px 15px;
             position: fixed;
             bottom: 20px;
+            /* 바닥에서 20px 띄움 */
             left: 50%;
             transform: translateX(-50%);
             width: 90%;
@@ -147,6 +158,7 @@
             border-radius: 30px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             z-index: 100;
+            /* 메시지보다 위에 오도록 설정 */
         }
 
         #input {
