--- a/index.html
+++ b/index.html
@@ -307,14 +307,30 @@
             socket.emit('join room', { room: roomName, name: userName });
         }
 
+        // index.html 내 <script> 부분의 함수들
+
         function goBack() {
+            // ⭐️ [퇴장 처리] 뒤로가기 시 서버에 명확히 나갔음을 알림
+            if (currentRoom) {
+                socket.emit('leave room');
+                currentRoom = '';
+            }
+
+            // UI 전환
             document.getElementById('list-area').style.display = 'flex';
             document.getElementById('chat-area').style.display = 'none';
             document.getElementById('footer-bar').style.display = 'block';
             document.getElementById('main-settings-btn').style.display = 'flex';
+
+            // 메시지 내역 초기화 (다시 들어올 때 깨끗하게 보이도록)
+            document.getElementById('messages').innerHTML = '';
         }
 
-        function leaveChat() { if (confirm("나갈까요?")) { socket.emit('leave room'); currentRoom = ''; goBack(); } }
+        function leaveChat() {
+            if (confirm("이 방에서 나갈까요?")) {
+                goBack(); // goBack에서 모든 퇴장 로직 처리
+            }
+        }
         function createNewRoom() { const val = document.getElementById('new-room-input').value; if (val) enterRoom(val); }
     </script>
 </body>
